# ads1115c_iot_power_monitor

./: CMakeLists.txt  LICENSE  README.md  main.c
implementation/: ads1115c.c  iotclient.c
includes/: ads1115c.h  iotclient.h  parson.c
